--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "UI Designer.", "UX Designer.", "Developer.", "Photographer.", "User Researcher.", "Illustrator." ]'></span>
+								     data-rotate='[ "UX Designer.", "UI Designer.", "Graphic Designer.", "Developer.", "Photographer.", "User Researcher.", "Illustrator." ]'></span>
 								</h2>
 							</div>
             </div>
